--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,11 +8,66 @@
     <%= stylesheet_link_tag "tailwind", "inter-font", "data-turbo-track": "reload" %>
 
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
+    <%= javascript_importmap_tags %>
   </head>
 
-  <body>
-    <main class="container mx-auto mt-28 px-5 flex">
+  <body id="application" data-controller="slideover" class="min-w-[350px] w-full sm:w-11/12 md:w-4/5 max-w-[800px] sm:mx-auto bg-[#2992c2] h-screen flex flex-col">
+
+    <!-- top -->
+    <aside id="top_nav" class=" fixed top-0 inset-x-0 pt-1 flex justify-between bg-white text-slate-500 ">
+     <%= link_to budgets_path, class:"flex flex-col hover:bg-slate-200  grow justify-end items-center #{"text-sky-500" if session[:page]=="Budgets"}" do %>
+      <svg  class="h-8 w-8" viewBox="0 0 16 16" fill="currentColor" title="budget">
+          <path d="M9 2h-1.5l7 7-5.3 5.2 0.8 0.8 6-6z"/>
+          <path d="M6 2h-6v6l7 7 6-6-7-7zM2.8 6c-0.7 0-1.3-0.6-1.3-1.2s0.6-1.2 1.2-1.2 1.3 0.5 1.3 1.2-0.6 1.2-1.2 1.2z"/>
+        </svg>
+        <div class="text-xs md:text-base">
+          Budget
+        </div>
+      <% end %>
+      <%= link_to accounts_path, class:"flex flex-col hover:bg-slate-200  grow justify-end items-center #{"text-sky-500" if session[:page]=="Accounts"}" do %>
+        <svg class="h-8 w-8" viewBox="0 0 16 16" fill="currentColor" title="transactions">
+          <path d="M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v1H0V4zm0 3v5a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V7H0zm3 2h1a1 1 0 0 1 1 1v1a1 1 0 0 1-1 1H3a1 1 0 0 1-1-1v-1a1 1 0 0 1 1-1z"/>
+        </svg>
+        <div class="text-xs md:text-base">
+          Accounts
+        </div>
+      <% end %>
+      <%= link_to new_trx_path( :account_id => params[:account_id] ), class:"flex flex-col hover:bg-slate-200  grow justify-end items-center #{"text-sky-500" if session[:page]=="Trxes"}",
+          data: { action: 'click->slideover#open',
+                  turbo_frame: 'slideover'
+        } do %>
+          <svg class="h-8 w-8" viewBox="0 0 16 16" fill="currentColor" title="add_account">
+            <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM8.5 4.5a.5.5 0 0 0-1 0v3h-3a.5.5 0 0 0 0 1h3v3a.5.5 0 0 0 1 0v-3h3a.5.5 0 0 0 0-1h-3v-3z"/>
+          </svg>
+          <div class="text-xs md:text-base">
+            Transaction
+          </div>
+      <% end %>
+      <%= link_to reports_path, class:"flex flex-col hover:bg-slate-200  grow justify-end items-center #{"text-sky-500" if session[:page]=="Reports"}" do %>
+        <svg class="h-8 w-8" viewBox="0 0 16 16" fill="currentColor" title="reports">
+          <path d="M0 15h16v1h-16v-1z"/>
+          <path d="M0 0h1v16h-1v-16z"/>
+          <path d="M9 8l-2.9-3-4.1 4v5h14v-13.1z"/>
+        </svg>
+        <div class="text-xs md:text-base">
+          Reports
+        </div>
+      <%end%>
+      <div class="flex flex-col hover:bg-slate-200  grow justify-end items-center <%= "text-sky-500" if session[:page]=="Help" %>">
+        <svg class="h-8 w-8" viewBox="0 0 16 16" fill="currentColor" title="add_account">
+          <path d="M16 9v-2l-1.7-0.6c-0.2-0.6-0.4-1.2-0.7-1.8l0.8-1.6-1.4-1.4-1.6 0.8c-0.5-0.3-1.1-0.6-1.8-0.7l-0.6-1.7h-2l-0.6 1.7c-0.6 0.2-1.2 0.4-1.7 0.7l-1.6-0.8-1.5 1.5 0.8 1.6c-0.3 0.5-0.5 1.1-0.7 1.7l-1.7 0.6v2l1.7 0.6c0.2 0.6 0.4 1.2 0.7 1.8l-0.8 1.6 1.4 1.4 1.6-0.8c0.5 0.3 1.1 0.6 1.8 0.7l0.6 1.7h2l0.6-1.7c0.6-0.2 1.2-0.4 1.8-0.7l1.6 0.8 1.4-1.4-0.8-1.6c0.3-0.5 0.6-1.1 0.7-1.8l1.7-0.6zM8 12c-2.2 0-4-1.8-4-4s1.8-4 4-4 4 1.8 4 4-1.8 4-4 4z"/>
+        </svg>
+        <div class="text-xs md:text-base">
+          Settings
+        </div>
+      </div>
+    </aside>
+
+    <div class="grow shrink overflow-auto mt-[53px] md:mt-[61px] flex flex-col">
       <%= yield %>
-    </main>
+    </div>
+
+    <%= render '/shared/slideover' %>
+
   </body>
 </html>
