--- a/app/views/budgets/_edit_dropdown.html.erb
+++ b/app/views/budgets/_edit_dropdown.html.erb
@@ -22,9 +22,9 @@
         <% if Trx.budgetItems.period(@given_date).empty? %>
           <%= link_to new_trx_path(trx: {date: "#{@given_date}",
                                 memo: "Budget",
-                                vendor_id: "#{Vendor.find_by(name: "Budget").id}",
-                                account_id: "#{Account.find_by(name: "Budget").id}",
-                                category_id: "#{Category.find_by(name: "Split").id}"
+                                vendor_id: "#{Vendor.find_or_create_by(name: "Budget").id}",
+                                account_id: "#{Account.find_or_create_by(name: "Budget").id}",
+                                category_id: "#{Category.find_or_create_by(name: "Split").id}"
                               }), 
               data: { action:"click->dropdown#toggle click->slideover#open", turbo_frame:"slideover" },
               class: 'p-2 text-gray-900 bg-white hover:bg-gray-300 whitespace-nowrap flex items-center gap-2 justify-between' do %>
