--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,2 +1,5 @@
 <% provide(:title, "Categories") %>
-<%= render 'category_list', categories: @categories %>
+<div class="bg-white">
+  <%= link_to 'New Category', new_category_path %>
+  <%= render 'category_list', categories: @categories %>
+</div>
