--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -53,14 +53,14 @@
           Reports
         </div>
       <%end%>
-      <div class="flex flex-col hover:bg-slate-200  grow justify-end items-center <%= "text-sky-500" if session[:page]=="Help" %>">
-        <svg class="h-8 w-8" viewBox="0 0 16 16" fill="currentColor" title="add_account">
+      <%= link_to settings_path, class:"flex flex-col hover:bg-slate-200  grow justify-end items-center #{"text-sky-500" if session[:page]=="Settings"}" do %>
+        <svg class="h-8 w-8" viewBox="0 0 16 16" fill="currentColor" title="settings">
           <path d="M16 9v-2l-1.7-0.6c-0.2-0.6-0.4-1.2-0.7-1.8l0.8-1.6-1.4-1.4-1.6 0.8c-0.5-0.3-1.1-0.6-1.8-0.7l-0.6-1.7h-2l-0.6 1.7c-0.6 0.2-1.2 0.4-1.7 0.7l-1.6-0.8-1.5 1.5 0.8 1.6c-0.3 0.5-0.5 1.1-0.7 1.7l-1.7 0.6v2l1.7 0.6c0.2 0.6 0.4 1.2 0.7 1.8l-0.8 1.6 1.4 1.4 1.6-0.8c0.5 0.3 1.1 0.6 1.8 0.7l0.6 1.7h2l0.6-1.7c0.6-0.2 1.2-0.4 1.8-0.7l1.6 0.8 1.4-1.4-0.8-1.6c0.3-0.5 0.6-1.1 0.7-1.8l1.7-0.6zM8 12c-2.2 0-4-1.8-4-4s1.8-4 4-4 4 1.8 4 4-1.8 4-4 4z"/>
         </svg>
         <div class="text-xs md:text-base">
           Settings
         </div>
-      </div>
+      <%end%>
     </aside>
 
     <div class="grow shrink overflow-auto mt-[53px] md:mt-[61px] flex flex-col">
