added settings page links to vendors and categories, and moved transaction CSV upload to settings

--- a/app/views/settings/index.html.erb
+++ b/app/views/settings/index.html.erb
@@ -3,4 +3,24 @@
   <div id="settings-header" class="px-4 py-2 flex justify-between bg-[#15323c]">
     <div class="m-auto text-white font-bold">Settings</div>
   </div>
+  <div id="settings-details" class="grow min-h-0 overflow-auto bg-slate-300">
+    <div>
+      <p><strong>Data Maintenance</strong></p>
+      <div>
+        <%= link_to 'Manage Categories', categories_path %>
+      </div>
+      <div>
+        <%= link_to 'Manage Vendors', vendors_path %>
+      </div>
+    </div>
+    <div>
+      <p><strong>Transaction Upload (CSV)</strong></p>
+      <div>
+        <%= form_tag import_trxes_path, multipart: true do %>
+          <%= file_field_tag :file %>
+          <%= submit_tag %>
+        <% end %>
+      </div>
+    </div>
+  </div>
 </div>
