--- a/app/views/trxes/_trx.html.erb
+++ b/app/views/trxes/_trx.html.erb
@@ -1,4 +1,4 @@
-<div id="<%= dom_id trx %>" data-controller="trx-toggle">
+<div id="<%= dom_id trx %>" data-controller="trx-toggle" data-trx-toggle-url-value="<%= trx_path(trx) %>">
 
   <!-- Trx Date section-->
   <div class="px-2 border-t-[2px] border-gray-400 bg-white text-xs font-bold">
@@ -40,11 +40,12 @@
         </div>
       </div>
     </div>
-    <div id="right" class="py-1 pl-1" data-action="click->trx-toggle#toggleCleared">
-      <svg class="cleared-svg w-4 h-4 rounded-full fill-green-700" viewBox="0 0 16 16">
-        <path d="M8 1.5c3.6 0 6.5 2.9 6.5 6.5s-2.9 6.5-6.5 6.5-6.5-2.9-6.5-6.5 2.9-6.5 6.5-6.5zM8 0c-4.4 0-8 3.6-8 8s3.6 8 8 8 8-3.6 8-8-3.6-8-8-8v0z"></path>
-        <path d="M9.9 10.3c-0.5 0.4-1.2 0.7-1.9 0.7-1.7 0-3-1.3-3-3s1.3-3 3-3c0.8 0 1.6 0.3 2.1 0.9l1.1-1.1c-0.8-0.8-2-1.3-3.2-1.3-2.5 0-4.5 2-4.5 4.5s2 4.5 4.5 4.5c1.1 0 2-0.4 2.8-1l-0.9-1.2z"></path>
-      </svg>
+    <div id="right" class="py-1 pl-1">
+      <input type="checkbox"
+                  data-action="trx-toggle#toggleCleared"
+                  data-trx-toggle-target="cleared"
+                  <%= "checked" if trx.cleared %>
+      >
     </div>
 
 
