--- a/app/views/trxes/_trx.html.erb
+++ b/app/views/trxes/_trx.html.erb
@@ -41,11 +41,10 @@
       </div>
     </div>
     <div id="right" class="py-1 pl-1">
-      <input type="checkbox"
-                  data-action="trx-toggle#toggleCleared"
-                  data-trx-toggle-target="cleared"
-                  <%= "checked" if trx.cleared %>
-      >
+      
+      <%= check_box_tag "trx[cleared]", 1, trx.cleared, 
+          { data: { action: "trx-toggle#toggleCleared",
+                    trx_toggle_target: "cleared" } } %>
     </div>
 
 
