--- a/app/views/trxes/_trx_index_table_mobile.html.erb
+++ b/app/views/trxes/_trx_index_table_mobile.html.erb
@@ -35,13 +35,13 @@
     <div class=" grow bg-[#15323c] divide-y">
       <div id="cleared" class="flex justify-between">
         <div class="text-sky-600">Cleared</div>
-        <div class="font-bold text-white">
+        <div id="clearedAmount" class="font-bold text-white">
           <%= presentableNumDollar(trxes.where(cleared: true).sum(:amount)) %>
         </div>
       </div>
       <div id="uncleared" class="flex justify-between">
         <div class="text-sky-600">Uncleared</div>
-        <div class="font-bold text-white">
+        <div id="unclearedAmount" class="font-bold text-white">
           <%= presentableNumDollar(trxes.where(cleared: false).sum(:amount)) %>
         </div>
       </div>
