--- a/app/views/reports/_spending_by_category.html.erb
+++ b/app/views/reports/_spending_by_category.html.erb
@@ -1,9 +1,14 @@
-<div class="flex items-stretch flex-col md:flex-row">
+<div class="flex items-stretch flex-col md:flex-row"
+  data-controller="category-chart"
+  data-category-chart-id-value="categoryChart"
+  data-category-chart-url-value="<%= categories_data_categories_path %>" >
   <div id="chart" class='px-2 grow'>
-    <%= pie_chart data, donut: true, thousands: ",", title: 'Spending By Category' %>
+    <%= pie_chart data, donut: true, thousands: ",", 
+          title: 'Spending By Category', id: 'categoryChart' %>
   </div>
 
-  <div id="data-table" class="px-4 table border bg-[#4a575e]">
+  <div id="category-table" data-category-chart-target='category'
+  class="px-4 table border bg-[#4a575e]">
     <div class="table-header-group">
       <div class="table-row text-[#aaacab]">
         <div class="table-cell align-bottom">Category</div>
