cleared some console logs and added ids

--- a/app/views/categories/categories_data.html.erb
+++ b/app/views/categories/categories_data.html.erb
@@ -5,7 +5,7 @@
       <div class="table-cell align-bottom text-center">Amount</div>
     </div>
   </div>
-  <div class="table-row-group">
+  <div id="category-table-rows" class="table-row-group">
     <% @categories.each do |key,value| %>
       <div class="table-row text-white">
         <div class="table-cell px-2 whitespace-nowrap "><%= key %></div>
