added link to manage ledgers

--- a/app/views/settings/index.html.erb
+++ b/app/views/settings/index.html.erb
@@ -12,6 +12,9 @@
       <div>
         <%= link_to 'Manage Vendors', vendors_path %>
       </div>
+      <div>
+        <%= link_to 'Manage Ledgers', ledgers_path %>
+      </div>
     </div>
     <div>
       <p><strong>Transaction Upload (CSV)</strong></p>
