--- a/app/views/trxes/_trx.html.erb
+++ b/app/views/trxes/_trx.html.erb
@@ -1,4 +1,4 @@
-<div id="<%= dom_id trx %>" data-controller="trx-toggle" data-trx-toggle-url-value="<%= trx_path(trx) %>">
+<div id="<%= dom_id trx %>" data-controller="trx-toggle" data-trx-toggle-url-value="<%= trx_path(trx) %>" data-trx-toggle-cleared-value="<%= trx.cleared %>">
 
   <!-- Trx Date section-->
   <div class="px-2 border-t-[2px] border-gray-400 bg-white text-xs font-bold">
@@ -41,9 +41,14 @@
       </div>
     </div>
     <div id="right" class="py-1 pl-1">
-      <%= check_box_tag "trx[cleared]", 1, trx.cleared, 
+      <%#= check_box_tag "trx[cleared]", 1, trx.cleared, 
           { data: { action: "trx-toggle#toggleCleared",
-                    trx_toggle_target: "cleared" } } %>
+                    trx_toggle_target: "cleared" }  }%>
+    <% if trx.cleared? %>
+      <%= inline_svg_tag "icons/cleared_closed.svg", class: "h-6 w-6 fill-green-500", aria_hidden: true, data: { action: "click->trx-toggle#toggleCleared", trx_toggle_target: "cleared"} %>
+    <% else %>
+      <%= inline_svg_tag "icons/cleared_open.svg", class: "h-6 w-6 fill-green-500", aria_hidden: true, data: { action: "click->trx-toggle#toggleCleared", trx_toggle_target: "cleared" } %>
+    <% end %>
     </div>
 
   </div>
