--- a/app/views/trxes/_form_mobile.html.erb
+++ b/app/views/trxes/_form_mobile.html.erb
@@ -118,7 +118,7 @@
     <%= f.text_field :memo, placeholder:"Enter a memo...", class:"w-full border-0" %>
     <div class="flex justify-between items-center p-3">
       <div>Cleared</div>
-      <input type="checkbox", class="w-8 h-8">
+      <%= f.check_box :cleared %>
     </div>
     <div class="p-3 flex items-center">
       <div class="pr-3">Flag</div>
