--- a/app/views/budgets/_edit_dropdown.html.erb
+++ b/app/views/budgets/_edit_dropdown.html.erb
@@ -7,12 +7,7 @@
          role="button" 
          tabindex="0" >
       <span class="appearance-none flex items-center inline-block text-sky-500 font-bold">
-        <svg width="24px" height="24px" viewBox="0 0 16 16" fill="currentColor" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-          <path d="M8 1c3.9 0 7 3.1 7 7s-3.1 7-7 7-7-3.1-7-7 3.1-7 7-7zM8 0c-4.4 0-8 3.6-8 8s3.6 8 8 8 8-3.6 8-8-3.6-8-8-8v0z"></path>
-          <path d="M4 7h2v2h-2v-2z"></path>
-          <path d="M7 7h2v2h-2v-2z"></path>
-          <path d="M10 7h2v2h-2v-2z"></path>
-        </svg>
+        <%= inline_svg_tag "icons/ellipsis-circle.svg", class: "h-6 w-6 fill-current", aria_hidden: true %>
       </span>
     </div>
     <!-- BEGIN Menu section -->
@@ -31,10 +26,7 @@
                 <span>
                   Create Budget
                 </span>
-                <svg width="16px" height="16px" viewBox="0 0 16 16" fill="currentColor" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-                  <path d="M1 11.9l-1 4.1 4.1-1 9.2-9.2-3.1-3.1-9.2 9.2zM1.5 15l-0.4-0.5 0.4-2 2 2-2 0.5zM10.9 4.4l-8.1 8-0.6-0.6 8.1-8 0.6 0.6z"></path>
-                  <path d="M15.3 0.7c-1.1-1.1-2.6-0.5-2.6-0.5l-1.5 1.5 3.1 3.1 1.5-1.5c0-0.1 0.6-1.5-0.5-2.6zM13.4 1.6l-0.5-0.5c0.6-0.6 1.1-0.1 1.1-0.1l-0.6 0.6z"></path>
-                </svg>
+              <%= inline_svg_tag "icons/pencil.svg", class: "h-4 w-4 fill-current", aria_hidden: true %>
           <% end %>
         <% else %>
           <%= link_to edit_trx_path(Trx.budgetItems.period(@given_date).first), 
@@ -43,10 +35,7 @@
                 <span>
                   Edit Budget
                 </span>
-                <svg width="16px" height="16px" viewBox="0 0 16 16" fill="currentColor" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-                  <path d="M1 11.9l-1 4.1 4.1-1 9.2-9.2-3.1-3.1-9.2 9.2zM1.5 15l-0.4-0.5 0.4-2 2 2-2 0.5zM10.9 4.4l-8.1 8-0.6-0.6 8.1-8 0.6 0.6z"></path>
-                  <path d="M15.3 0.7c-1.1-1.1-2.6-0.5-2.6-0.5l-1.5 1.5 3.1 3.1 1.5-1.5c0-0.1 0.6-1.5-0.5-2.6zM13.4 1.6l-0.5-0.5c0.6-0.6 1.1-0.1 1.1-0.1l-0.6 0.6z"></path>
-                </svg>
+              <%= inline_svg_tag "icons/pencil.svg", class: "h-4 w-4 fill-current", aria_hidden: true %>
           <% end %>
         <% end %>
 
@@ -57,10 +46,7 @@
               <span>
                 Note
               </span>
-              <svg width="16px" height="16px" class="" viewBox="0 0 16 16" fill="currentColor" title="note">
-                <path d="M10 0v4h4z"></path>
-                <path d="M9 0h-7v16h12v-11h-5v-5zM12 12h-8v-1h8v1zM12 10h-8v-1h8v1zM12 7v1h-8v-1h8z"></path>
-              </svg>
+              <%= inline_svg_tag "icons/file-text.svg", class: "h-4 w-4 fill-current", aria_hidden: true %>
           <% end %>
           <!-- Auto-Fill Budget Section -->
           <%= link_to '#', 
@@ -69,9 +55,7 @@
               <span>
                 Auto-fill Budget
               </span>
-              <svg width="16px" height="16px" class="" viewBox="0 0 16 16" fill="currentColor" title="lightning">
-                <path d="M7.99 0l-7.010 9.38 6.020-0.42-4.96 7.040 12.96-10-7.010 0.47 7.010-6.47h-7.010z"></path>
-              </svg>
+              <%= inline_svg_tag "icons/bolt.svg", class: "h-4 w-4 fill-current", aria_hidden: true %>
           <% end %>
       </div>
     </div>
