--- a/app/views/trxes/_trx_entry.html.erb
+++ b/app/views/trxes/_trx_entry.html.erb
@@ -1,7 +1,7 @@
 <div class="flex px-6 justify-between items-baseline bg-gray-900">
   <h3 class="text-xl text-white" id="slideover-header"><%= @trx.persisted? ? "Edit" : "New" %> Transaction</h3>
   <button data-action="slideover#close" class="flex items-center justify-center h-12 w-12 rounded-full focus:outline-none focus:bg-gray-600 hover:bg-gray-600" aria-label="Close slideover">
-    <span class="h-7 w-7 text-white">X</span>
+    <%= inline_svg_tag "icons/close.svg", class: "h-8 w-8 fill-white", aria_hidden: true %>
   </button>
 </div>
 <div class="mt-4 px-4 text-gray-700">
