--- a/app/views/reports/index.html.erb
+++ b/app/views/reports/index.html.erb
@@ -11,9 +11,9 @@
     <li class="mr-1" data-tabs-target="tab" data-action="click->tabs#change">
       <a class="bg-white inline-block py-2 px-4 text-blue-500 hover:text-blue-700 font-semibold no-underline" href="#">Spending by Vendor</a>
     </li>
-    <li class="mr-1" data-tabs-target="tab" data-action="click->tabs#change">
+    <%# <li class="mr-1" data-tabs-target="tab" data-action="click->tabs#change">
       <a class="bg-white inline-block py-2 px-4 text-blue-500 hover:text-blue-700 font-semibold no-underline" href="#">Income / Expense</a>
-    </li>
+    </li> %>
   </ul>
 
   <div class="hidden py-4 px-4 border-l border-b border-r" data-tabs-target="panel">
@@ -27,10 +27,10 @@
   <div class="hidden py-4 px-4 border-l border-b border-r" data-tabs-target="panel">
     <%= render 'spending_by_vendor', data: @spending_by_vendor %>
   </div>
-
+<%# 
   <div class="hidden py-4 px-4 border-l border-b border-r" data-tabs-target="panel">
     Income / Expense panel
-  </div>
+  </div> %>
 </div>
 
 
