added about blurb and link to github

--- a/app/views/settings/index.html.erb
+++ b/app/views/settings/index.html.erb
@@ -25,5 +25,10 @@
         <% end %>
       </div>
     </div>
+    <div>
+      <p><strong>About</strong></p>
+      <p>MoneyApp was written by Charles Hug</p>
+      <p>Visit my <a href="https://github.com/charleshug/moneyapp" class="underline">GitHub</a> page for more information</p>
+    </div>
   </div>
 </div>
