--- a/app/views/trxes/_form_mobile.html.erb
+++ b/app/views/trxes/_form_mobile.html.erb
@@ -135,7 +135,7 @@
     <% if f.object.persisted? %>
       <!-- NOTE: record is deleted but slideover doesn't close, ?update stimulus handleResponse?-->
       <%= link_to 'Delete', trx_path(trx), class: "p-2 rounded font-bold text-white bg-red-700", 
-        data: {turbo_method: :delete, turbo_confirm: "Are you sure?" }
+        data: {turbo_method: :delete, turbo_confirm: "Are you sure?", action: "click->slideover#disconnect" }
       %>
     <% end %>
   </div>
