fixed Settings page :title

--- a/app/views/settings/index.html.erb
+++ b/app/views/settings/index.html.erb
@@ -1,4 +1,4 @@
-<% provide(:title, "Reports") %>
+<% provide(:title, "Settings") %>
 <div class="grow min-w-0 bg-white">
   <div id="settings-header" class="px-4 py-2 flex justify-between bg-[#15323c]">
     <div class="m-auto text-white font-bold">Settings</div>
