--- a/app/views/categories/edit.html.erb
+++ b/app/views/categories/edit.html.erb
@@ -1,5 +1,4 @@
-<% provide(:title, "Categories") %>
-<%= render 'form', category: @category %>
-<%= form_with(model: @category, local:true, method: "delete") do |f| %>
-  <%= f.submit 'Delete' %>
+<% provide(:title, "Edit Category") %>
+<%= turbo_frame_tag "slideover" do %>
+  <%= render 'slideover_wrapper' %>
 <% end %>
