--- a/app/views/accounts/edit.html.erb
+++ b/app/views/accounts/edit.html.erb
@@ -1,13 +1,4 @@
+<% provide(:title, "Edit Account") %>
 <%= turbo_frame_tag "slideover" do %>
-  <div class="flex px-6 justify-between items-baseline bg-gray-900">
-    <h3 class="text-xl text-white" id="slideover-header">Add Account</h3>
-    <button data-action="slideover#close" class="flex items-center justify-center h-12 w-12 rounded-full focus:outline-none focus:bg-gray-600 hover:bg-gray-600" aria-label="Close slideover">
-      <span class="h-7 w-7 text-white">X</span>
-    </button>
-  </div>
-  <div class="mt-4 px-4 text-gray-700">
-    <div id="slideover-content">
-      <%= render 'form', account: @account %>
-    </div>
-  </div>
+  <%= render 'slideover_wrapper' %>
 <% end %>
