removed unneeded Account.first model reference

--- a/app/views/accounts/_all_accounts_mobile.html.erb
+++ b/app/views/accounts/_all_accounts_mobile.html.erb
@@ -4,7 +4,7 @@
     <div class="grow basis-0"></div>
     <div class="text-white font-bold">Accounts</div>
     <div class="grow basis-0 flex justify-end text-sky-500 font-bold">
-      <%= render 'edit_dropdown', account: Account.first %>
+      <%= render 'edit_dropdown' %>
     </div>
   </div>
   <!-- Accounts details box -->
