improved slideover ability for trxes views

--- a/app/views/trxes/new.html.erb
+++ b/app/views/trxes/new.html.erb
@@ -1,3 +1,4 @@
+<% provide(:title, "New Transaction") %>
 <%= turbo_frame_tag "slideover" do %>
-  <%= render 'trx_entry' %>
+  <%= render 'slideover_wrapper' %>
 <% end %>
