--- a/app/views/trxes/edit.html.erb
+++ b/app/views/trxes/edit.html.erb
@@ -1,3 +1,4 @@
+<% provide(:title, "Edit Transaction") %>
 <%= turbo_frame_tag "slideover" do %>
-  <%= render 'trx_entry' %>
+  <%= render 'slideover_wrapper' %>
 <% end %>
