--- a/app/views/trxes/_trx.html.erb
+++ b/app/views/trxes/_trx.html.erb
@@ -40,7 +40,7 @@
         </div>
       </div>
     </div>
-    <div id="right" class="py-1 pl-1">
+    <div id="right" class="py-1 pl-1 hover:cursor-pointer">
       <%#= check_box_tag "trx[cleared]", 1, trx.cleared, 
           { data: { action: "trx-toggle#toggleCleared",
                     trx_toggle_target: "cleared" }  }%>
