--- a/app/views/trxes/_form_mobile.html.erb
+++ b/app/views/trxes/_form_mobile.html.erb
@@ -1,10 +1,10 @@
-<%= form_with(model: trx, id: 'trx-form', html: {class: 'space-y-6' }, data: { slideover_target: 'form'}) do |f| %>
+<%= form_with(model: trx, id: 'trx-form', html: {class: 'space-y-6' }, data: { controller: 'trx-form', slideover_target: 'form'}) do |f| %>
   <div id="attributes_container" class="px-2 grid items-center">
     <%#= f.label :amount %>
     <%#= f.number_field :amount, :value =>(f.object.amount || "" ) %>
 
     <div id="amount_container"
-      data-controller="toggle toggle-type trx-form" 
+      data-controller="toggle toggle-type" 
       data-toggle-change-class='hidden'>
       <div id="amount_box" class="py-6 px-2 bg-black flex justify-end items-center"
             data-action="click->toggle#toggle">
